--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -1,4 +1,4 @@
-message(STATUS "Setting up Eosio Wasm Toolchain")
+message(STATUS "Setting up Eosio Wasm Toolchain @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@ at @CDT_ROOT_DIR@")
 set(CMAKE_SYSTEM_NAME WebAssembly)
 
 set(EOSIO_CDT_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
@@ -17,6 +17,7 @@ set(CMAKE_CXX_LINK_EXECUTABLE "${WASM_LINKER} <LINK_FLAGS> <OBJECTS> -o <TARGET>
 
 set(CMAKE_AR "@CDT_ROOT_DIR@/bin/eosio-ar" CACHE PATH "ar" FORCE)
 set(CMAKE_RANLIB "@CDT_ROOT_DIR@/bin/eosio-ranlib" CACHE PATH "ranlib" FORCE)
+set(ABIGEN "@CDT_ROOT_DIR@/bin/eosio-abigen")
 
 # hack for CMake on Linux
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
@@ -25,3 +26,10 @@ set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 # hack for OSX
 set(CMAKE_OSX_SYSROOT="@SYSROOT_DIR@")
 set(CMAKE_OSX_DEPLOYMENT_TARGET="")
+
+macro(add_eosio_cdt_executable TARGET)
+   add_executable( ${TARGET}.wasm ${ARGN} )
+   target_compile_options( ${TARGET}.wasm PUBLIC -abigen )
+   get_target_property(BINOUTPUT ${TARGET}.wasm BINARY_DIR)
+   target_compile_options( ${TARGET}.wasm PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
+endmacro()
