--- a/scripts/generate_package.sh.in
+++ b/scripts/generate_package.sh.in
@@ -1,14 +1,31 @@
 #! /bin/bash
 
-VERSION="@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
 VARIANT=$1
+
+VERSION="@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
+
+BUILD_DIR="@CMAKE_BINARY_DIR@"
+
+VENDOR="@VENDOR@"
+PROJECT="@PROJECT_NAME@"
+DESC="@DESC@"
+URL="@URL@"
+EMAIL="@EMAIL@"
+
+export BUILD_DIR
+export VERSION
+export VENDOR
+export PROJECT
+export DESC
+export URL
+export EMAIL
 
 mkdir tmp
 
 if [[ ${VARIANT} == "brew" ]]; then
-   bash generate_bottle.sh ${VERSION}
+   bash generate_bottle.sh ${VERSION} ${BUILD_DIR}
 elif [[ ${VARIANT} == "deb" ]]; then
-   bash generate_deb.sh ${VERSION}
+   bash generate_deb.sh ${VERSION} ${BUILD_DIR}
 else
    echo "Error, unknown package type. Use either ['brew', 'deb', 'rpm']."
    exit -1
