--- a/scripts/generate_package.sh.in
+++ b/scripts/generate_package.sh.in
@@ -23,9 +23,11 @@ export EMAIL
 mkdir tmp
 
 if [[ ${VARIANT} == "brew" ]]; then
-   bash generate_bottle.sh ${VERSION} ${BUILD_DIR}
+   bash generate_bottle.sh
 elif [[ ${VARIANT} == "deb" ]]; then
-   bash generate_deb.sh ${VERSION} ${BUILD_DIR}
+   bash generate_deb.sh
+elif [[ ${VARIANT} == "rpm" ]]; then
+   bash generate_rpm.sh
 else
    echo "Error, unknown package type. Use either ['brew', 'deb', 'rpm']."
    exit -1
