--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -27,7 +27,7 @@ set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 set(CMAKE_OSX_SYSROOT="@SYSROOT_DIR@")
 set(CMAKE_OSX_DEPLOYMENT_TARGET="")
 
-macro(add_eosio_cdt_executable CONTRACT_NAME TARGET)
+macro(add_contract CONTRACT_NAME TARGET)
    add_executable( ${TARGET}.wasm ${ARGN} )
    target_compile_options( ${TARGET}.wasm PUBLIC -abigen )
    get_target_property(BINOUTPUT ${TARGET}.wasm BINARY_DIR)
