--- a/examples/abigen_test/CMakeLists.txt
+++ b/examples/abigen_test/CMakeLists.txt
@@ -4,4 +4,4 @@ project(abigen_test_example VERSION 1.0.0)
 find_package(eosio.cdt)
 
 ### generate both the wasm and abi
-add_eosio_cdt_executable( test test.cpp )
+add_contract( abitest abitest abitest.cpp )
