moved eosio tools from submodule

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,3 @@
-#add_subdirectory(eosio_ld_tool)
-
 set(CLANG_BINDIR ${CMAKE_BINARY_DIR}/EosioClang-prefix/src/EosioClang-build)
 set(LLVM_DIR ${CLANG_BINDIR}/lib/cmake/llvm)
 
@@ -9,10 +7,14 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${CLANG_BINDIR}/tools/clang/include)
+include_directories(${CLANG_BINDIR}/include)
 link_directories(${LLVM_LIBRARY_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
+set(EOSIO_STACK_SIZE 8192)
 add_subdirectory(eosio_abigen_tool)
 add_subdirectory(eosio_c_tool)
+add_subdirectory(eosio_ld_tool)
+
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/compiler_options.hpp.in ${CMAKE_BINARY_DIR}/compiler_options.hpp)
