--- a/tools/eosio_abigen_tool/CMakeLists.txt
+++ b/tools/eosio_abigen_tool/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
 add_executable(eosio-abigen ${CMAKE_BINARY_DIR}/eosio-abigen.cpp)
 target_compile_options(eosio-abigen PRIVATE -fexceptions -fno-rtti)
 target_include_directories(eosio-abigen PUBLIC ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../include ${CMAKE_CURRENT_SOURCE_DIR}/../jsoncons/include ${CMAKE_SOURCE_DIR}/eosio_llvm/tools/clang/include ${LLVM_INCLUDE_DIR})
-
+add_dependencies(eosio-abigen EosioClang)
 target_link_libraries(eosio-abigen
   clangTooling
   clangBasic
@@ -44,5 +44,8 @@ target_link_libraries(eosio-abigen
   LLVMSupport
   LLVMDemangle
 )
+
+add_custom_command( TARGET eosio-abigen POST_BUILD COMMAND mkdir -p ${CMAKE_BINARY_DIR}/bin )
+add_custom_command( TARGET eosio-abigen POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio-abigen> ${CMAKE_BINARY_DIR}/bin/ )
 
 install(FILES ${CMAKE_BINARY_DIR}/bin/eosio-abigen DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
