--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -12,9 +12,62 @@ link_directories(${LLVM_LIBRARY_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 set(EOSIO_STACK_SIZE 8192)
-add_subdirectory(eosio_abigen_tool)
-add_subdirectory(eosio_c_tool)
-add_subdirectory(eosio_ld_tool)
+
+macro (add_tool name)
+   set(LLVM_LINK_COMPONENTS support)
+
+   include_directories(include)
+
+   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${name}.cpp.in ${CMAKE_BINARY_DIR}/${name}.cpp)
+
+   add_executable(${name} ${CMAKE_BINARY_DIR}/${name}.cpp)
+   target_compile_options(${name} PRIVATE -fexceptions -fno-rtti)
+   target_include_directories(${name} PUBLIC ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../include ${CMAKE_CURRENT_SOURCE_DIR}/../jsoncons/include ${CMAKE_SOURCE_DIR}/eosio_llvm/tools/clang/include ${LLVM_INCLUDE_DIR})
+   add_dependencies(${name} EosioClang)
+   target_link_libraries(${name}
+     clangTooling
+     clangBasic
+     clangASTMatchers
+     clangRewrite
+     clangToolingCore
+     clangFrontend
+     clangDriver
+     clangSerialization
+     clangParse
+     clangSema
+     clangAnalysis
+     clangAST
+     clangLex
+     clangBasic
+     clangEdit
+
+     LLVMipo
+     LLVMScalarOpts
+     LLVMInstCombine
+     LLVMTransformUtils
+     LLVMAnalysis
+     LLVMTarget
+     LLVMOption
+     LLVMMCParser
+     LLVMMC
+     LLVMObject
+     LLVMBitReader
+     LLVMCore
+     LLVMSupport
+     LLVMDemangle
+   )
+
+   add_custom_command( TARGET ${name} POST_BUILD COMMAND mkdir -p ${CMAKE_BINARY_DIR}/bin )
+   add_custom_command( TARGET ${name} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${name}> ${CMAKE_BINARY_DIR}/bin/ )
+
+   install(FILES ${CMAKE_BINARY_DIR}/bin/${name} DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+endmacro()
+
+add_subdirectory(abigen)
+add_subdirectory(abimerge)
+add_subdirectory(abidiff)
+add_subdirectory(cc)
+add_subdirectory(ld)
 
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/compiler_options.hpp.in ${CMAKE_BINARY_DIR}/compiler_options.hpp)
